Nav Fixed, 1 link, Scroll on click

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -10,6 +10,7 @@
     <script defer src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
+
     <div id="nav-bar">
         <div id="nav-toggle" class="toggle">
             <div id="bar-one" class="togglebar"></div>
@@ -23,6 +24,7 @@
         <div class="nav-option" id="nav-projects"><a href="#">Projects</a></div>
         <div class="nav-option" id="nav-education"><a href="#">Education</a></div>
         <div class="nav-option" id="nav-reachout"><a href="#">Reach Out</a></div>
+        <div class="nav-option" id="nav-about"><a href="javascript:void(0)">Who an I?</a></div>
     </div>
 
 
@@ -42,7 +44,7 @@
             <p>My interst in software began in my early years of middle school.</p>
             <p>In middle school I created my first website. This website was developed using HTML and CSS exclusivly which I taught myself by watching various Youtube tutorials and reading through tons of pages on StackOverflow.</p>
             <p>My programming abilities have definetly improved since then and I am glad to make my childhood passion into a reality</p>
-        
+            <p style="text-align:center">some of my knowlege</p>
         </div>
     </div>
 </body>
