--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -41,11 +41,21 @@
             <p>I was born in the City of Roses, Portland OR</p>
             <p>I am a recent graduate from PDX code guild</p>
             <p>PDX code guild is a fullstack python based bootcamp that has taught me everything from programming to working with others on projects.</p>
-            <p>My interst in software began in my early years of middle school.</p>
+            <p>My interst in software began in my early years of middle school</p>
             <p>In middle school I created my first website. This website was developed using HTML and CSS exclusivly which I taught myself by watching various Youtube tutorials and reading through tons of pages on StackOverflow.</p>
-            <p>My programming abilities have definetly improved since then and I am glad to make my childhood passion into a reality</p>
-            <p style="text-align:center">some of my knowlege</p>
+            <p>My programming abilities have definetly improved since then and I am glad to make my childhood passion into a reality.</p>
+            <p style="text-align:center">some of my tech knowlege</p>
+            
         </div>
+        </div><div id="languages"><img src="{% static 'imgs/django.svg' %}" alt="">
+            <img src="{% static 'imgs/python.svg' %}" alt="">
+            <img src="{% static 'imgs/javascript.svg' %}" alt="">
+            <img src="{% static 'imgs/git.svg' %}" alt="">
     </div>
+
+
+    <div id="work-wrapper">
+        <h1 id="work-head">IVE BUILT</h1>
+    </div>    
 </body>
 </html>
