NavBarColorChange, Projects added, Navlinks updated

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -21,10 +21,10 @@
 
 
     <div id="nav-option-wrap">
-        <div class="nav-option" id="nav-projects"><a href="#">Projects</a></div>
+        <div class="nav-option" id="nav-projects"><a href="javascript:void(0)">Projects</a></div>
         <div class="nav-option" id="nav-education"><a href="#">Education</a></div>
         <div class="nav-option" id="nav-reachout"><a href="#">Reach Out</a></div>
-        <div class="nav-option" id="nav-about"><a href="javascript:void(0)">Who an I?</a></div>
+        <div class="nav-option" id="nav-about"><a href="javascript:void(0)">Who am I?</a></div>
     </div>
 
 
@@ -56,6 +56,38 @@
 
     <div id="work-wrapper">
         <h1 id="work-head">IVE BUILT</h1>
-    </div>    
+
+        <div id="qrpixel-wrap">
+            <img id="qr-logo" src="{% static 'imgs/qrlogo.svg' %}" alt="qrlogo">
+            <img id="qr-screen" src="{% static 'imgs/qrscreen.jpg' %}" alt="qrscreen">
+        </div>
+        <div id="qr-link"><a href="http://qrpixel.herokuapp.com/">QrPixel</a></div>
+
+
+
+        <div id="dream-wrap">
+            <img id="dream-logo" src="{% static 'imgs/dreamstreamlogo.svg' %}" alt="dreamlogo">
+            <img id="dream-screen" src="{% static 'imgs/dreamstreamscreen.jpg' %}" alt="dreamscreen">
+        </div>
+        <div id="dream-link"><a href="https://dream-stream-capstone.herokuapp.com/">DreamStream</a></div>
+
+
+
+        <div id="weather-wrap">
+            <img id="weather-logo" src="{% static 'imgs/weatherlogo.svg' %}" alt="weatherlogo">
+            <img id="weather-screen" src="{% static 'imgs/weatherscreen.jpg' %}" alt="weatherscreen">
+        </div>
+        <div id="weather-link"><a href="https://gagelieble.com/weather/g/">Weather App</a></div>
+
+    </div> 
+    
+    
+
+
+
+    <div id="education-wrapper">
+        <h1 id="edu-head">EDUCATION</h1>
+        <h2 id="pdxcode-title">PDX CODE GUILD</h2>
+    </div>
 </body>
 </html>
