All sections added

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -22,8 +22,8 @@
 
     <div id="nav-option-wrap">
         <div class="nav-option" id="nav-projects"><a href="javascript:void(0)">Projects</a></div>
-        <div class="nav-option" id="nav-education"><a href="#">Education</a></div>
-        <div class="nav-option" id="nav-reachout"><a href="#">Reach Out</a></div>
+        <div class="nav-option" id="nav-education"><a href="javascript:void(0)">Education</a></div>
+        <div class="nav-option" id="nav-reachout"><a href="javascript:void(0)">Reach Out</a></div>
         <div class="nav-option" id="nav-about"><a href="javascript:void(0)">Who am I?</a></div>
     </div>
 
@@ -88,6 +88,42 @@
     <div id="education-wrapper">
         <h1 id="edu-head">EDUCATION</h1>
         <h2 id="pdxcode-title">PDX CODE GUILD</h2>
+        <div id="clock-section">
+            
+        <div id="clock-outline"><img src="{% static 'imgs/clockdots.svg' %}" alt=""></div><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span>
+        <div id="time-tags">
+        <h2 class="edu-taglines">Is a</h2>
+        <h2 class="edu-taglines">500 hour</h2>
+        <h2 class="edu-taglines">16 week</h2>
+        <h2 class="edu-taglines">Course</h2>
+    </div>
+    </div>
+    <div id="teaches-section">
+    <h2 class="edu-taglines">That teaches . . .</h2>
+</div>
+    </div>
+
+    <div id="graduated-section">
+        <h2 id="grad-title">I Graduated in 2022</h2>
+        <img id="cert-img" src="{% static 'imgs/cert.jpg' %}" alt="cert">
+        <div id="cert-title">PDX Code Guild Certification</div>
+    </div>
+
+    <div id="reachout-section">
+        <h1>REACH OUT</h1>
+        <h2>gagelieble  hotmail.com</h2>
+        <div id="reach-links">
+            <div id="linkedin-wrap">
+            <div class='reach-btns' id="linkedin-btn"><a href="https://www.linkedin.com/in/gage-lieble-954076229">Linkedin</a></div>
+            <img id="linkedin-logo" src="{% static 'imgs/linkedinLight.svg' %}" alt="">
+        </div>
+            <div id="github-wrap">
+            <div class='reach-btns' id="github-btn"><a href="https://github.com/Gage-Lieble">Github</a></div><img id="githublight-logo" src="{% static 'imgs/gitLight.svg' %}" alt=""></div>
+        </div>
+    </div>
+
+    <div id="footer-wrap">
+        copyright &copy; 2022 gage lieble
     </div>
 </body>
 </html>
