All sections added

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -42,7 +42,7 @@
             <p>I am a recent graduate from PDX code guild</p>
             <p>PDX code guild is a fullstack python based bootcamp that has taught me everything from programming to working with others on projects.</p>
             <p>My interst in software began in my early years of middle school</p>
-            <p>In middle school I created my first website. This website was developed using HTML and CSS exclusivly which I taught myself by watching various Youtube tutorials and reading through tons of pages on StackOverflow.</p>
+            <p>In middle school I created my first website. That website was developed using HTML and CSS exclusivly which I taught myself by watching various Youtube tutorials and reading through tons of pages on StackOverflow.</p>
             <p>My programming abilities have definetly improved since then and I am glad to make my childhood passion into a reality.</p>
             <p style="text-align:center">some of my tech knowlege</p>
             
@@ -92,10 +92,10 @@
             
         <div id="clock-outline"><img src="{% static 'imgs/clockdots.svg' %}" alt=""></div><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span>
         <div id="time-tags">
-        <h2 class="edu-taglines">Is a</h2>
+        <h2 style='margin-left: -25px;' class="edu-taglines">Is a</h2>
         <h2 class="edu-taglines">500 hour</h2>
         <h2 class="edu-taglines">16 week</h2>
-        <h2 class="edu-taglines">Course</h2>
+        <h2 style='margin-left: -25px;' class="edu-taglines">Course</h2>
     </div>
     </div>
     <div id="teaches-section">
