--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,9 +11,26 @@ h1{
     font-size: 50px;
 }
 
+/* TOPO */
 
+#topo-left{
+    position: absolute;
+    width: 125px;
+    right: 0;
+    z-index: 101;
+    
+}
+#topo-right{
+    position: absolute;
+    width: 70px;
+    bottom: 0;
+    left: 0;
+    
+}
 
-
+.topogone{
+    display: none;
+}
 /* NAV */
 
 
@@ -56,6 +73,7 @@ h1{
 }
 #nav-toggle{
     padding: 5px 10px 10px 10px;
+    
 }
 
 
@@ -138,7 +156,6 @@ pointer-events: all;
 }
 
 #main-word{
-    /* color:rgb(144, 221, 144); */
     color: white;
     font-family: Visby;
     position: absolute;
@@ -355,8 +372,14 @@ pointer-events: all;
 #pdxcode-title{
     color: white;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
+#guild-logo{
+    width: 35px;
+    padding-left: 15px;
+}
 
 #clock-section{
     display: flex;
@@ -423,12 +446,27 @@ pointer-events: all;
 #teaches-section{
     margin-top: 100px;
     padding: 0px 25px 0px 25px;
+    
+}
+.teachsub-section{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 75px;
+}
+
+.align-start{
+    align-items: flex-start;
+}
+.frameworks{
+    color: white;
 }
 
 #graduated-section{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 950px;
 }
 
 #grad-title{
