--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -106,6 +106,9 @@
 
         <div class="teachsub-section">
             <h2 class="edu-taglines">Various Frameworks</h2>
+            <div id="frameworklogo-wrap">
+                <img src="{% static 'imgs/frameworklogos.svg' %}" alt="">
+            </div>
             <h3 class="frameworks">Django</h3>
             <h3 class="frameworks">Vue.js</h3>
             <h3 class="frameworks">Django Rest</h3>
@@ -115,6 +118,9 @@
 
         <div class="teachsub-section align-start">
             <h2 class="edu-taglines">Programming Languages</h2>
+            <div id="programminglogo-wrap">
+                <img src="{% static 'imgs/programminglogos.svg' %}" alt="">
+            </div>
             <h3 class="frameworks">Python</h3>
             <h3 class="frameworks">Javascript</h3>
             <h3 class="frameworks">Html</h3>
