Added resume, fixed layout of tech tools

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -127,7 +127,7 @@
             <h3 class="frameworks">Css</h3>
         </div>
 
-        <div class="teachsub-section">
+        <div class="teachsub-section" id="tech-tools">
             <h2 class="edu-taglines">Technical Tools</h2>
             <h3 class="frameworks">SQL</h3>
             <h3 class="frameworks">REST API</h3>
@@ -144,6 +144,7 @@
         <h2 id="grad-title">I Graduated in 2022</h2>
         <img id="cert-img" src="{% static 'imgs/cert.jpg' %}" alt="cert">
         <div id="cert-title">PDX Code Guild Certification</div>
+        <a id="resume-link" href="{% static 'imgs/GageLiebleResume8-27.pdf' %}">My Resume</a>
     </div>
 
     <div id="reachout-section">
