--- a/static/css/style.css
+++ b/static/css/style.css
@@ -605,3 +605,109 @@ margin-left: -25px;
     src: url('/static/css/fonts/Visby.otf') format("truetype");
 }
 
+
+/* MEDIA QURIES */
+@media screen and (min-width: 768px) {
+    h1{
+        font-size: 65px;
+    }
+    .nav-option{
+        font-size: 30px;
+        padding: 25px 0px 25px 0px;
+    }
+    #about-wrapper{
+        padding: 30px 50px 0px 50px;
+    }
+    #languages{
+        width: 500px;
+        margin: 0 auto;
+    }
+    #sentences{
+        font-size: 30px;
+    }
+    #work-wrapper{
+        
+        height: 1500px;
+    }
+    #qr-logo{
+        width: 150px;
+        margin-left: 25px;
+    }
+    #dream-logo{
+        width: 150px;
+        height: 150px;
+        margin-left: 25px;
+    }
+    #weather-logo{
+        width: 150px;
+        height: 150px;
+        margin-left: 25px;
+    }
+
+    #clock-section{
+        margin: 200px 0px 200px 0px;
+    }
+    #clock-outline{
+        width: 600px;
+        height: 600px;
+        margin-left: -50%;
+    }
+
+    #hour-hand{
+        width: 350px;
+        height: 20px;
+        margin-left: -105%;
+    }
+    #min-hand{
+        width: 300px;
+        height: 20px;
+        margin-left: -105%;
+    }
+
+    #time-tags>h2{
+        font-size: 40px;
+    }
+
+    .edu-taglines{
+        font-size: 40px;
+    }
+    
+    .frameworks{
+        font-size: 30px;
+    }
+    #frameworklogo-wrap{
+        height: 500px;
+        width: 85%;
+    }
+    #frameworklogo-wrap>img{
+        width: 200px;
+    }
+
+    #programminglogo-wrap{
+        height: 600px;
+        width: 85%;
+    }
+    #programminglogo-wrap>img{
+        width: 200px;
+    }
+    #graduated-section{
+        margin-top: 2100px;
+    }
+    #grad-title{
+        font-size: 40px;
+    }
+    #cert-img{
+        width: 500px;
+    }
+    #cert-title{
+        width: 500px;
+        font-size: 25px;
+    }
+    #resume-link{
+        font-size: 25px;
+    }
+    #reach-links{
+        margin-top: 50px;
+        width: 300px;
+    }
+}
