Fixed project wraps, Fixed missing font chars

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -59,28 +59,40 @@
 
     <div id="work-wrapper">
         <h1 id="work-head">IVE BUILT</h1>
-
-        <div id="qrpixel-wrap">
-            <img id="qr-logo" src="{% static 'imgs/qrlogo.svg' %}" alt="qrlogo">
-            <img id="qr-screen" src="{% static 'imgs/qrscreen.jpg' %}" alt="qrscreen">
+        
+        <div class="site-wrap">
+            <img class="work-logo" src="{% static 'imgs/qrlogo.svg' %}" alt="qrlogo">
+            <img class="work-img" src="{% static 'imgs/qrscreen.jpg' %}" alt="qrscreen">
         </div>
-        <div id="qr-link"><a href="http://qrpixel.herokuapp.com/">QrPixel</a></div>
-
-
-
-        <div id="dream-wrap">
-            <img id="dream-logo" src="{% static 'imgs/dreamstreamlogo.svg' %}" alt="dreamlogo">
-            <img id="dream-screen" src="{% static 'imgs/dreamstreamscreen.jpg' %}" alt="dreamscreen">
+        <div class="work-links"><a class="qr-links" href="https://github.com/Gage-Lieble/QrPixel">Github ></a><a class="qr-links" href="http://qrpixel.herokuapp.com/">QrPixel ></a></div>
+        <div id="work-languages">
+            <img src="{% static 'imgs/javascript.svg' %}" alt="">
+            <img src="{% static 'imgs/django.svg' %}" alt="">
+            <img src="{% static 'imgs/python.svg' %}" alt="">
+            </div>
+    
+        <div class="site-wrap">
+            <img id="dream-logo" class="work-logo" src="{% static 'imgs/dreamstreamlogo.svg' %}" alt="dreamlogo">
+            <img class="work-img" src="{% static 'imgs/dreamstreamscreen.jpg' %}" alt="dreamscreen">
         </div>
-        <div id="dream-link"><a href="https://dream-stream-capstone.herokuapp.com/">DreamStream</a></div>
+        <div class="work-links"><a class="dream-links" href="https://github.com/Gage-Lieble/DreamStream">Github ></a><a class="dream-links" href="https://dream-stream-capstone.herokuapp.com/">DreamStream ></a></div>
+        <div id="work-languages">
+            <img src="{% static 'imgs/javascript.svg' %}" alt="">
+            <img src="{% static 'imgs/django.svg' %}" alt="">
+            <img src="{% static 'imgs/python.svg' %}" alt="">
+            </div>
 
 
-
-        <div id="weather-wrap">
-            <img id="weather-logo" src="{% static 'imgs/weatherlogo.svg' %}" alt="weatherlogo">
-            <img id="weather-screen" src="{% static 'imgs/weatherscreen.jpg' %}" alt="weatherscreen">
+        
+        <div class="site-wrap">
+            <img id="weather-logo" class="work-logo" src="{% static 'imgs/weatherlogo.svg' %}" alt="weatherlogo">
+            <img class="work-img" src="{% static 'imgs/weatherscreen.jpg' %}" alt="weatherscreen">
         </div>
-        <div id="weather-link"><a href="https://gagelieble.com/weather/g/">Weather App</a></div>
+        <div class="work-links"><a class="weather-links" href="https://github.com/Gage-Lieble/APIweatherapp">Github ></a><a class="weather-links" href="https://gagelieble.com/weather/g/">Weather ></a></div>
+        <div id="work-languages">
+            <img src="{% static 'imgs/django.svg' %}" alt="">
+            <img src="{% static 'imgs/python.svg' %}" alt="">
+            </div>
 
     </div> 
     
@@ -96,7 +108,7 @@
         <div id="clock-outline"><img src="{% static 'imgs/clockdots.svg' %}" alt=""></div><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span>
         <div id="time-tags">
         <h2 style='margin-left: -25px;' class="edu-taglines">Is a</h2>
-        <h2 class="edu-taglines">500 hour</h2>
+        <h2 class="edu-taglines">500+ hour</h2>
         <h2 class="edu-taglines">16 week</h2>
         <h2 style='margin-left: -25px;' class="edu-taglines">Course</h2>
     </div>
@@ -141,15 +153,15 @@
     </div>
 
     <div id="graduated-section">
-        <h2 id="grad-title">I Graduated in 2022</h2>
+        <h2 id="grad-title">I Graduated in 2022!</h2>
         <img id="cert-img" src="{% static 'imgs/cert.jpg' %}" alt="cert">
         <div id="cert-title">PDX Code Guild Certification</div>
-        <a id="resume-link" href="{% static 'imgs/GageLiebleResume8-27.pdf' %}">My Resume</a>
+        <a id="resume-link" href="{% static 'imgs/GageLiebleResume8-27.pdf' %}">My Resume ></a>
     </div>
 
     <div id="reachout-section">
         <h1>REACH OUT</h1>
-        <h2>gagelieble  hotmail.com</h2>
+        <h2>gagelieble@hotmail.com</h2>
         <div id="reach-links">
             <div id="linkedin-wrap">
             <div class='reach-btns' id="linkedin-btn"><a href="https://www.linkedin.com/in/gage-lieble-954076229">Linkedin</a></div>
