--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -32,7 +32,7 @@
     <div id="intro-wrapper">
         
         <h1 id="main-word">SOFTWARE</h1>
-        <img id="headshot-img" src="{% static 'imgs/gagehead.png' %}" alt="">
+        <img id="headshot-img" src="{% static 'imgs/gagehead.png' %}" alt="headphoto">
         <h1 id="developer">DEVELOPER</h1>
         <h4 id="myname">Hey, Im <span style="color:rgb(144, 221, 144);">Gage Lieble</span></h4>
     </div>
@@ -41,13 +41,13 @@
         
         <h1 id="about-head">WHO AM I?</h1>
         <div id="sentences">
-            <p>I was born in the City of Roses, Portland OR</p>
-            <p>I am a recent graduate from PDX code guild</p>
-            <p>PDX code guild is a fullstack python based bootcamp that has taught me everything from programming to working with others on projects.</p>
-            <p>My interst in software began in my early years of middle school</p>
-            <p>In middle school I created my first website. That website was developed using HTML and CSS exclusivly which I taught myself by watching various Youtube tutorials and reading through tons of pages on StackOverflow.</p>
-            <p>My programming abilities have definetly improved since then and I am glad to make my childhood passion into a reality.</p>
-            <p style="text-align:center">some of my tech knowlege</p>
+            <p>I was born in the City of Roses, Portland OR.</p>
+            <p>And I am also a recent graduate of PDX code guild!</p>
+            <p>PDX code guild is a full stack python based bootcamp that has taught me everything from programming to working on projects with other individuals.</p>
+            <p>My interest in software began in my early years of middle school.</p>
+            <p>In middle school I created my first website. That website was developed using HTML and CSS exclusively which I taught myself by watching various Youtube tutorials and reading through tons of pages on StackOverflow.</p>
+            <p>My programming abilities have definitely improved since then and I am glad to make my childhood passion into a reality!</p>
+            <p style="text-align:center"><span style="color:rgb(144, 221, 144);">some</span> of my tech knowlege</p>
             
         </div>
         </div><div id="languages"><img src="{% static 'imgs/django.svg' %}" alt="">
@@ -56,10 +56,10 @@
             <img src="{% static 'imgs/git.svg' %}" alt="">
     </div>
 
-
+<h1 id="work-head">IVE BUILT</h1>
     <div id="work-wrapper">
-        <h1 id="work-head">IVE BUILT</h1>
         
+        <div>
         <div class="site-wrap">
             <img class="work-logo" src="{% static 'imgs/qrlogo.svg' %}" alt="qrlogo">
             <img class="work-img" src="{% static 'imgs/qrscreen.jpg' %}" alt="qrscreen">
@@ -70,7 +70,8 @@
             <img src="{% static 'imgs/django.svg' %}" alt="">
             <img src="{% static 'imgs/python.svg' %}" alt="">
             </div>
-    
+        </div>
+        <div>
         <div class="site-wrap">
             <img id="dream-logo" class="work-logo" src="{% static 'imgs/dreamstreamlogo.svg' %}" alt="dreamlogo">
             <img class="work-img" src="{% static 'imgs/dreamstreamscreen.jpg' %}" alt="dreamscreen">
@@ -81,9 +82,9 @@
             <img src="{% static 'imgs/django.svg' %}" alt="">
             <img src="{% static 'imgs/python.svg' %}" alt="">
             </div>
+        </div>
 
-
-        
+        <div>
         <div class="site-wrap">
             <img id="weather-logo" class="work-logo" src="{% static 'imgs/weatherlogo.svg' %}" alt="weatherlogo">
             <img class="work-img" src="{% static 'imgs/weatherscreen.jpg' %}" alt="weatherscreen">
@@ -93,7 +94,7 @@
             <img src="{% static 'imgs/django.svg' %}" alt="">
             <img src="{% static 'imgs/python.svg' %}" alt="">
             </div>
-
+        </div>
     </div> 
     
     
@@ -105,7 +106,7 @@
         <h2 id="pdxcode-title">PDX CODE GUILD <img id="guild-logo" src="{% static 'imgs/guildlogo.svg' %}" alt=""></h2>
         <div id="clock-section">
             
-        <div id="clock-outline"><img src="{% static 'imgs/clockdots.svg' %}" alt=""></div><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span>
+        <div id="clock-outline"><img src="{% static 'imgs/clockdots.svg' %}" alt=""><span id="hour-hand"></span><span id="min-hand"></span><span id="sec-hand"></span></div>
         <div id="time-tags">
         <h2 style='margin-left: -25px;' class="edu-taglines">Is a</h2>
         <h2 class="edu-taglines">500+ hour</h2>
