--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,15 @@ body{
     font-family: Visby;
     overflow-x: hidden;
 }
+::selection{
+    background-color:rgb(144, 221, 144);
+    color: #212121;
+}
+body::-webkit-scrollbar {
+    width: 0px;   
+}
+
+
 html{
     overflow-x: hidden;
 }
@@ -74,9 +83,10 @@ h1{
 }
 #nav-toggle{
     padding: 5px 10px 10px 10px;
-    
 }
-
+#nav-toggle:hover{
+    cursor: pointer;
+}
 
 
 #nav-option-wrap{
@@ -109,7 +119,9 @@ pointer-events: all;
 #nav-option-wrap.light-options>.nav-option>a{
     color: rgb(29, 29, 31);
 }
-
+#nav-option-wrap.light-options>.nav-option>a:hover{
+    color: rgb(120, 120, 130);
+}
 #nav-option-wrap[class=""]{
     z-index: -500;
     
@@ -119,11 +131,10 @@ pointer-events: all;
     text-align: center;
     color: white;
     padding: 15px;
-
-
-
 }
-
+.nav-option>a:hover{
+    color: rgb(205, 205, 205);
+}
 .nav-option.closedlink{
     pointer-events: none;
 }
@@ -231,13 +242,18 @@ pointer-events: all;
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 100px;
+    
     background-color: rgb(250, 252, 255);
-    padding-top: 75px;
+    
 }
 
 #work-head{
     color: rgb(29, 29, 31);
+    background-color: rgb(250, 252, 255);
+    margin: 100px 0px 0px 0px;
+    padding-top: 75px;
+    text-align: center;
+    
 }
 
 .site-wrap{
@@ -294,6 +310,7 @@ pointer-events: all;
     text-decoration: none;
     width: 120px;
     text-align: center;
+    z-index: 11;
 }
 
 #dream-logo{
@@ -314,8 +331,10 @@ pointer-events: all;
     display: flex;
     justify-content: space-evenly;
     width: 300px;
+    margin: 0 auto;
     margin-top: 50px;
     margin-bottom: 100px;
+    
     
 }
 #work-languages>img{
@@ -368,6 +387,11 @@ pointer-events: all;
     border-radius: 500px;
     margin-left: -60%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
 }
 #clock-outline>img{
     
@@ -376,22 +400,22 @@ pointer-events: all;
 }
 
 #hour-hand{
-    background-color: white;
+    
     width: 275px;
     height: 15px;
-    color: white;
-    margin-left: -110%;
+    
+    background: linear-gradient(to right, rgba(255,255,255,1) 50%, rgba(243, 8, 8, 0) 50%);
     position: absolute;
     transform: rotate(45deg);
-    animation: clockRotate 15s linear infinite;
+    animation: clockRotate 10s linear infinite;
     
 }
 #min-hand{
-    background-color: white;
+    background: linear-gradient(to right, rgba(255,255,255,1) 50%, rgba(243, 8, 8, 0) 50%);
     width: 225px;
     height: 15px;
-    color: white;
-    margin-left: -110%;
+    
+    
     position: absolute;
     animation: clockRotate 5s linear infinite;
 }
@@ -492,6 +516,9 @@ pointer-events: all;
     color:#f37024;
     margin: 60px 0px 0px 0px;
     padding: 15px;
+}
+#resume-link:hover{
+    color:#c24700;
 }
 /* REACH OUT */
 
@@ -602,18 +629,18 @@ margin-left: -25px;
     #clock-outline{
         width: 600px;
         height: 600px;
-        margin-left: -50%;
+        margin-left: -55%;
     }
 
     #hour-hand{
         width: 350px;
         height: 20px;
-        margin-left: -105%;
+        
     }
     #min-hand{
         width: 300px;
         height: 20px;
-        margin-left: -105%;
+        
     }
 
     #time-tags>h2{
@@ -664,3 +691,66 @@ margin-left: -25px;
     }
 }
 
+@media screen and (min-width: 1024px) {
+    h1{
+        font-size: 65px !important;
+    }
+    #work-wrapper{
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;  
+        min-height: 850px;
+    }
+    
+    .qr-links:hover{
+        background-color: #c7341d;
+        
+    }
+    .dream-links:hover{
+        background-color: #0f0f0f;
+    }
+    .weather-links:hover{
+        background-color: rgb(48, 174, 202);
+    }
+    #about-wrapper{
+        width: 750px;
+        margin: 0 auto;
+    }
+    #education-wrapper{
+        width: 1000px;
+        margin: 0 auto;
+        
+    }
+    #clock-outline{
+        width: 550px;
+        height: 550px;
+        border: 20px solid white;
+        border-radius: 500px;
+        margin-left: 0%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #hour-hand{
+        background: linear-gradient(to right, rgba(255,255,255,1) 50%, rgba(243, 8, 8, 0) 50%);
+        width: 350px;
+        height: 15px;
+        color: white;
+        margin-left: 0%;
+        position: absolute;
+        transform: rotate(45deg);
+        animation: clockRotate 15s linear infinite;
+        
+    }
+    #min-hand{
+        background: linear-gradient(to right, rgba(255,255,255,1) 50%, rgba(243, 8, 8, 0) 50%);
+        width: 275px;
+        height: 15px;
+        color: white;
+        margin-left: 0%;
+        position: absolute;
+        animation: clockRotate 5s linear infinite;
+    }
+}
